# Freedom

./: .gitignore  README  README.md
3D-printing-profiles/: overture_petg-creality_e3v2-direct_drive-textured_pei.curaprofile
Electrical/3k/rp2040/: RP2040.kicad_pcb  RP2040.kicad_sch
Electrical/future_development/proto_oled/: #auto_saved_files#  RP2040_minimal.kicad_pro  RP2040_minimal.kicad_sch
Mechanical/3k/case/: case-Body-non-print.step  case.FCStd
QMK-Firmware/freedom/: config.h  info.json  mcuconf.h
QMK-Firmware/via/: via.json
accidental_hard_reset/: retrieve.sh
archive/old_firmware/: gpio_config.h  menu.h  tusb_config.h  usb_descriptors.h
archive/old_firmware/ssd1306/: font.h
first_keeb/Electrical/: #auto_saved_files#  README.md  first_keeb.kicad_pcb  first_keeb.kicad_pro  first_keeb.kicad_sch
first_keeb/Electrical/groupings_template_no_oled/: RP2040_minimal.kicad_pcb  RP2040_minimal.kicad_pro  RP2040_minimal.kicad_sch
first_keeb/Electrical/plots/: first_keeb-B_Cu.gbr  (+11 more)
first_keeb/Firmware/: CMakeLists.txt  README.md  gpio_config.h  main.cpp  settings_util.h  usb_descriptors.c
first_keeb/Firmware/ssd1306/: ssd1306.c
first_keeb/Mechanical/: single_piece_case.FCStd
first_keeb/firmware/: config.h  firmware.c  firmware.h  freedom.c  freedom.h  info.json  matrix.c  mcuconf.h  post_rules.mk  readme.md  rules.mk  via_common.c
first_keeb/freedom/: config.h  freedom.c  halconf.h  info.json  matrix.c  rules.mk
first_keeb/old_firmware/: README.md  usb_descriptors.c
first_keeb/sch_pcb/: first_keeb.kicad_pro
first_keeb/via/: via.json
(+436 files in other folders)
